page atelier et page de configuration

--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -4,6 +4,5 @@
 //@import "abstractions/{YOUR FILE NAME HERE}";
 //@import "base/{YOUR FILE NAME HERE}";
 
-@import "layouts/onecolumn.layout.scss";
+@import "layouts/onecolumn.layout";
 @import "variables/variables";
-
