--- a/sites/all/themes/atelierstheme/sass/layouts/onecolumn.layout.scss
+++ b/sites/all/themes/atelierstheme/sass/layouts/onecolumn.layout.scss
@@ -34,6 +34,12 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: "PermanentMarker";
+    src: url(../fonts/PermanentMarker.ttf);
+    font-style: normal;
+}
+
 @include add-grid(12);
 @include add-gutter(0);
 //@include add-guttertyle('split');
@@ -51,9 +57,109 @@ a {
 }
 
 .l-header {
-    background-image: url(../images/u44.png);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;     
+    
+        margin: 0 auto;
+        position: relative;
+    
+    .block-w {
+        
+        font-family: PermanentMarker;
+        color: white;
+        font-size: 35px;
+        text-align: center;
+        padding-top:30px;
+        
+        position:absolute;
+        display: block;
+        background: rgba(255,255,255,0.25);
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+        
+        @include breakpoint($mobiles) {
+
+            top: 229%;
+            height:300px;
+            width:300px;
+            
+        }
+        
+        @include breakpoint($mobilem) {
+            
+            top: 229%;
+            height:350x;
+            width:350px;
+            
+        }
+        
+        @include breakpoint($mobilel) {
+            
+            top: 300%;
+            height:85vw;
+            width:85vw;
+            
+        }
+        
+        @include breakpoint($tablet) {
+
+            top: 350%;
+            height:650px;
+            width:650px;
+            
+        }
+        
+    }
+    
+    @include breakpoint($laptop) {
+
+        background-image: url(../images/u44.png);
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        position:absolute;
+        
+    } 
+    
+    .header-img {
+        
+        @include breakpoint($laptop) {
+            
+            display:none;
+
+        }  
+        
+        position:absolute;
+        
+    }
+    
+    .logo-img {
+        
+            position: absolute;
+            /* float: left; */
+            left: 22vw;
+            top: 42%;
+        
+        @include breakpoint($mobiles){
+
+            width: 14em;
+        }
+        
+        @include breakpoint($mobilem){
+
+            width: 16em;
+        }
+        
+        @include breakpoint($mobilel){
+
+            width: 22em;
+        }
+        
+        @include breakpoint($tablet){
+
+            width: 25em;
+        }
+        
+    }
     
     .burger {
         
