--- a/sites/all/themes/atelierstheme/sass/layouts/onecolumn.layout.scss
+++ b/sites/all/themes/atelierstheme/sass/layouts/onecolumn.layout.scss
@@ -228,8 +228,7 @@ a {
                         margin-left: 34vw;
 
                     }
-
-
+                    
                     &.ilot_gourmand {
 
                         margin-left: 60vw;
@@ -420,6 +419,7 @@ a {
 
 .l-content {
     background-color: yellow;
+    @include grid-span(12,1);
     //height:2337px;
 }
 
@@ -605,5 +605,128 @@ a {
         
     }
 
+    
+}
+
+.atelier {
+    
+    font-family: 'SourceSansProRegular';
+    font-size: 20px;
+    
+    .atelier-body {
+        
+        line-height: 1.4em;
+        margin-left: 7%;
+        margin-right: 7%;
+        
+        strong {
+            
+            font-weight: 800;
+            
+        }
+        
+        em {
+            
+            font-style: italic;
+            
+        }
+        
+        h1 {
+        
+            font-family: 'SourceSansProSemiBold';
+            text-transform: uppercase;
+            font-size: 35px;
+            margin:25px 0;
+
+        }
+
+        h2 {
+
+            font-size: 28px;
+            text-transform: uppercase;
+            margin:25px 0;
+
+        }
+        
+        ul {
+            
+            margin-left:15px;
+            
+            li {
+            
+                list-style: disc inside none;
+
+            }
+        
+            
+        }
+        
+
+    }
+    
+
+    .contact {
+        
+            text-transform: uppercase;
+            background-color: #f7941d;
+            color: white;
+            padding: 11px;
+            width: 233px;
+            display: block;
+            margin: 30px auto;
+            text-align: center;
+
+    }
+    
+    .atelier-header-bg-web {
+        
+        display: none;
+        
+         @include breakpoint($laptop){
+            
+             display: block;
+
+        }
+        
+    }
+    
+    .atelier-header-bg-mobile {
+        
+        display: block;
+        
+         @include breakpoint($laptop){
+            
+             display: none;
+
+        }
+        
+    }
+    
+    .title {
+        
+        font-size: 4vw;
+        text-transform: uppercase;
+        color: white;
+        text-align: center;
+        margin: 26px 0 0 auto;
+        
+    }
+    
+    .picto {
+        
+        width: 15vw;
+        height: auto;
+        margin: 0 auto;
+        display: block;
+        margin-top: -31vw;
+        
+    }
+    
+    .block-orange {
+        
+        width:100%;
+        height:10vw;
+        background-color:#f7941d;
+    }
     
 }
