--- a/sites/all/themes/atelierstheme/sass/variables/_variables.scss
+++ b/sites/all/themes/atelierstheme/sass/variables/_variables.scss
@@ -4,6 +4,7 @@ $mobilel : 425px;
 $tablet : 768px;
 $laptop : 1024px;
 $laptopl : 1440px;
+$laptopxl : 1920px;
 
 
-$max : $laptop;
+$max : $laptopxl ;
