--- a/sites/all/themes/atelierstheme/sass/layouts/onecolumn.layout.scss
+++ b/sites/all/themes/atelierstheme/sass/layouts/onecolumn.layout.scss
@@ -393,12 +393,15 @@ a {
             &.o {
                  #burger_1{
                     transform: translate(0.2px,0px) rotate(45deg);
+                    fill:white;
                 }
                  #burger_2{
                    opacity:0;
+                  fill:white;
                 }
                  #burger_3{
                     transform: translate(-0.2px, (-($offsetY_3 - $offsetY_2)/2)) rotate(-45deg) ;
+                    fill:white;
                 }
                 #g10 {
                     transform: translate(-0.1px,0);
