--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -6,3 +6,10 @@
 
 @import "layouts/onecolumn.layout";
 @import "variables/variables";
+@import "variables/mixin";
+@import "components/imagetitle";
+@import "components/home";
+@import "components/presentation";
+
+
+////coucou
