--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -10,6 +10,7 @@
 @import "components/imagetitle";
 @import "components/home";
 @import "components/presentation";
-
+@import "components/home-services";
+@import "components/global";
 
 ////coucou
