--- a/sites/all/themes/atelierstheme/sass/layouts/onecolumn.layout.scss
+++ b/sites/all/themes/atelierstheme/sass/layouts/onecolumn.layout.scss
@@ -22,6 +22,10 @@ a {
     display: none;
     margin: 0 auto;
     position: relative;
+    background-color: red;
+    
+    @include grid-span(12, 1);
+    
     @include breakpoint($tablet) {
         display: block;
         /*
@@ -31,6 +35,22 @@ a {
             position:absolute;
         */
     }
+    
+    .menu {
+        
+        width:38vw;
+        margin:0 auto;
+        text-transform: uppercase;
+        
+        .leaf {
+            
+            display: inline-block;
+            padding:3vw 2vw;
+            
+        }
+        
+    }
+    
 }
 
 .burger {
@@ -106,7 +126,7 @@ a {
 }
 
 .l-content {
-    background-color: yellow;
+    //background-color: yellow;
     @include grid-span(12, 1);
     //height:2337px;
 }
@@ -177,88 +197,57 @@ a {
 .l-map {
     @include grid-span(12, 1);
     .bloc1 {
+        
         background-color: cyan;
         height: 341px;
         //@include grid-span(12,1);
         @include breakpoint($laptop) {
+            
             @include grid-span(6, 7);
+            
         }
+        
     }
+    
     .bloc2 {
+        
         background-color: #00a886;
         padding: 60px 0;
+        
         @include breakpoint($laptop) {
+            
             @include grid-span(6, 7);
+            
         }
+        
         .text {
+            
             color: #ffffff;
             font: 23px 'SourceSansProLight', sans-serif;
             text-align: center;
+            
             .gros {
                 font: 35px 'SourceSansProSemiBold', sans-serif;
                 text-transform: uppercase;
             }
+            
             .petit {
                 font-size: 15px;
             }
+            
             .tel {
                 width: 1.05em;
             }
+            
         }
+        
     }
+    
     display: block;
+    
 }
 
 .home {}
-
-.home-services {
-    .header-img {
-        margin-bottom: 7vw;
-    }
-    .title-services {
-        font-family: PermanentMarker;
-        font-size: 12vw;
-        text-align: center;
-        position: absolute;
-        left: 0;
-        right: 0;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 19vw;
-        color: white;
-    }
-    .text {
-        text-align: center;
-        font-family: 'SourceSansProRegular';
-        margin: 127px 0 50px 0;
-        .title {
-            font-family: 'SourceSansProSemiBold';
-            margin: 25px 0;
-            text-transform: uppercase;
-        }
-    }
-    .container {
-        position: relative;
-        .picto_ateliers {
-            width: 9em;
-            height: auto;
-            display: block;
-            top: 0;
-            left: 0;
-            margin: -100px auto;
-            display: block;
-        }
-    }
-    .plus {
-        text-transform: uppercase;
-        background-color: #00a886;
-        padding: 10px;
-        width: 200px;
-        text-align: center;
-        margin: 0 auto;
-        color: white;
-    }
-}
 
 .atelier {
     font-family: 'SourceSansProRegular';
@@ -372,21 +361,25 @@ a {
 }
 
 .autres_services {
+    
     @include grid-span(12, 1);
     background-color: white;
     text-align: center;
     padding: 5vw;
+    
     h1 {
         text-transform: uppercase;
         font-family: 'SourceSansProRegular';
         font-size: 4vw;
     }
+    
     .img-pictos {
         .picto_ateliers {
             width: 15vw;
             margin: 7vw 7vw 2vw 7vw;
         }
     }
+    
     .container-title-pictos {
         position: relative;
         /* margin-top: 2vw; */
@@ -405,5 +398,7 @@ a {
             text-transform: uppercase;
             float: left;
         }
+        
     }
+    
 }
