--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -11,6 +11,7 @@
 @import "components/home";
 @import "components/presentation";
 @import "components/home-services";
+@import "components/ateliers";
 @import "components/global";
 
 ////coucou
