--- a/sites/all/themes/atelierstheme/sass/components/global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/global.scss
@@ -19,36 +19,74 @@ body {
     padding:4vw;
     
      @include breakpoint($laptop) {
-         
+
             font-size:1.5vw;
-         
+
         }
-    
+
      @include breakpoint($laptopxl) {
-         
+
             font-size:23px;
-         
+
         }
-    
+
         h1 {
-        
+
            text-transform: uppercase;
            font-family: 'SourceSansProSemiBold';
            font-size:20px;
-            
+
             @include breakpoint($laptop) {
-                
+
                 font-size:2vw;
-                
+
             }
 
              @include breakpoint($laptopxl) {
-                 
+
                 font-size:30px;
 
             }
-            
+
            padding: 1.5vw 0; 
 
-        }
+    }
+
 }
+
+    .pictotitlecontainer {
+
+        width:100%;
+        position: relative;
+
+        .image {
+            
+             width:100%;
+            
+        }
+
+        .pictotitle {
+
+            //@include translate(-50%,-50%);
+            position:absolute;
+            top: 50%;
+            left: 50%;
+            
+            img {
+                
+                width:10vw;
+                
+            }
+
+        }
+        
+        .title {
+
+            //@include translate(-50%,-50%);
+            position:absolute;
+            top: 50%;
+            left: 50%;
+
+        }
+
+    }
