--- a/sites/all/themes/atelierstheme/sass/components/home-services.scss
+++ b/sites/all/themes/atelierstheme/sass/components/home-services.scss
@@ -58,6 +58,7 @@
         text-align: center;
         font-family: 'SourceSansProRegular';
         margin: 127px 0 50px 0;
+        
         .title {
             
             font-family: 'SourceSansProSemiBold';
@@ -88,8 +89,17 @@
         padding: 10px;
         width: 200px;
         text-align: center;
-        margin: 0 auto;
+        margin: 0 auto 2vw auto;
         color: white;
+        position: relative;
+        
+        .f_g_droite {
+            
+            width: 8px;
+            position: absolute;
+            left: 167px;
+
+        }
     }
     
     .pictotitlecontainer {
