--- a/sites/all/themes/atelierstheme/sass/components/global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/global.scss
@@ -1,5 +1,6 @@
 @import "breakpoint";
 @import "../variables/variables";
+@import "../variables/mixin";
 
 body {
     
@@ -67,14 +68,14 @@ body {
 
         .pictotitle {
 
-            //@include translate(-50%,-50%);
+            @include translate(-50%,-50%);
             position:absolute;
             top: 50%;
             left: 50%;
             
             img {
                 
-                width:10vw;
+                width:16vw;
                 
             }
 
@@ -82,10 +83,12 @@ body {
         
         .title {
 
-            //@include translate(-50%,-50%);
+            @include translate(-50%,-50%);
             position:absolute;
-            top: 50%;
+            top: 80%;
             left: 50%;
+            text-transform: uppercase;
+            color: white;
 
         }
 
